// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingLabel should render correctly based on the props 1`] = `null`;

exports[`FloatingLabel should render correctly based on the props 2`] = `
<label
  class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 3`] = `
<label
  class="md-floating-label md-floating-label--floating md-text--secondary"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 4`] = `
<label
  class="md-floating-label md-floating-label--floating md-text--theme-primary"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 5`] = `
<label
  class="md-floating-label md-floating-label--floating md-text--error"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 6`] = `
<label
  class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--error"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 7`] = `
<label
  class="md-floating-label md-floating-label--inactive md-floating-label--custom-size md-floating-label--inactive-custom-size md-text--secondary"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 8`] = `
<label
  class="md-floating-label md-floating-label--custom-size md-floating-label--floating md-text--secondary"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 9`] = `
<label
  class="md-floating-label md-floating-label--custom-size md-floating-label--floating md-text--theme-primary"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 10`] = `
<label
  class="md-floating-label md-floating-label--custom-size md-floating-label--floating md-text--error"
  for="test-field"
>
  Some label
</label>
`;

exports[`FloatingLabel should render correctly based on the props 11`] = `
<label
  class="md-floating-label md-floating-label--floating md-floating-label--icon-offset md-text--error"
  for="test-field"
>
  Some label
</label>
`;
